# streaming-server

./: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  run.sh  viewer_bot.py
src/: main.rs
static/: index.html
