[package]
name = "streaming-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web = "4"
actix-web-actors = "4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


